<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/remLayout"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#212121"
    android:orientation="vertical"
    android:elevation="@android:dimen/app_icon_size">

    <CheckBox
        android:id="@+id/remItem"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
        android:paddingTop="10dp"
        android:textColor="#476877"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/remItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/btnEdit"
        android:layout_toRightOf="@id/remItem"
        android:paddingTop="10dp"
        android:textColor="#85ffffff"
        android:textSize="18dp" />

    <!--This should include the location/time for an ALERT-->


    <TextView
        android:id="@+id/remAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remItemName"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:layout_toLeftOf="@id/btnEdit"
        android:layout_toRightOf="@id/remItem"
        android:textColor="#85ffffff"
        android:textSize="12dp" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="10dp"
        android:background="#212121"
        android:drawableStart="@drawable/ic_delete"
        android:paddingLeft="12.5dp" />

    <Button
        android:id="@+id/btnEdit"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@id/btnDelete"
        android:background="#212121"
        android:drawableStart="@drawable/ic_edit"
        android:paddingLeft="12.5dp" />


</RelativeLayout>