<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#303030"
    android:padding="8dp"
    android:elevation="@android:dimen/app_icon_size">

    <TextView
        android:id="@+id/remListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/listButton"
        android:layout_toRightOf="@id/checkAllButton"
        android:textColor="#85ffffff"
        android:textSize="24dp" />
    <!--android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"-->

    <EditText
        android:id="@+id/editRemListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/listButton"
        android:layout_toRightOf="@id/checkAllButton"
        android:background="@android:color/transparent"
        android:imeActionId="4"
        android:singleLine="true"
        android:textColor="#476877"
        android:textSize="24dp"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/checkAllButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="10dp"
        android:background="#303030"
        android:drawablePadding="25dp"
        android:focusable="false"
        android:includeFontPadding="false"
        android:paddingLeft="25dp"
        android:paddingTop="25dp" />

    <Button
        android:id="@+id/listButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:background="#303030"
        android:drawableStart="@drawable/ic_list"
        android:focusable="false"
        android:paddingLeft="12.5dp" />

    <!--    <Button-->
    <!--        android:id="@+id/openMenuButton"-->
    <!--        android:layout_width="50dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:layout_centerInParent="true"-->
    <!--        android:layout_marginRight="10dp"-->
    <!--        android:drawableStart="@android:drawable/ic_dialog_info"-->
    <!--        android:paddingLeft="12.5dp"-->
    <!--        style="@style/Widget.AppCompat.Button.Borderless"-->
    <!--        android:background="#A5E3FF"-->
    <!--        android:focusable="false"/>-->


    <!--    <View-->
    <!--        android:id="@+id/display"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:layout_below="@id/createNewReminderButton"-->
    <!--        android:background="#000000"-->
    <!--        android:focusable="false"-->
    <!--        android:visibility="gone"/>-->


</RelativeLayout>