<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a1a1a">

    <TextView
        android:id="@+id/editReminderTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#2d2d2d"
        android:gravity="center_horizontal|center_vertical"
        android:text="Edit Reminder"
        android:textColor="#75ffffff"
        android:textSize="24dp"
        android:textStyle="bold" />

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/editReminderTitle"
        android:background="#30ffffff"></View>

    <!--Type-->
    <TextView
        android:id="@+id/editType"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/lineView"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="Type:"
        android:textColor="#80ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editInputType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/lineView"
        android:layout_marginTop="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/editType"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="Enter the type of reminder"
        android:paddingTop="2dp"
        android:singleLine="true"
        android:textColor="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="13sp" />

    <View
        android:id="@+id/lineView1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/editType"
        android:layout_marginLeft="10dp"
        android:background="#30ffffff"></View>

    <!--Description-->
    <TextView
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/lineView1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="top"
        android:text="Description:"
        android:textColor="#80ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editInputDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/lineView1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/editDescription"
        android:background="@null"
        android:gravity="top"
        android:hint="Enter a description"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:textColor="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="13dp" />

    <View
        android:id="@+id/lineView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/editInputDescription"
        android:layout_marginLeft="10dp"
        android:background="#30ffffff" />

    <!--Alert-->
    <TextView
        android:id="@+id/editAlert"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@id/lineView2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="Alert:"
        android:textColor="#80ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/lineView3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/editAlert"
        android:layout_marginLeft="10dp"
        android:background="#30ffffff" />

    <!--Time-->
    <TextView
        android:id="@+id/editTime"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/lineView3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/editAlert"
        android:gravity="center_vertical"
        android:onClick="showTimePickerDialog"
        android:text="Time:"
        android:textColor="#75ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/editInputTimeButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/lineView3"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/editTime"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="Set a time"
        android:inputType="datetime"
        android:paddingTop="2dp"
        android:textColor="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/repeatView"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_below="@id/editAlert"
        android:layout_toRightOf="@id/editInputTimeButton"
        android:gravity="center_vertical"
        android:text="Repeat:"
        android:textColor="#80ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/editInputRepeatButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@id/editAlert"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@id/repeatView"
        android:gravity="center|start"
        android:includeFontPadding="true"
        android:text="Never"
        android:textAllCaps="false"
        android:textColor="#40ffffff" />

    <Button
        android:id="@+id/editInputDateButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/editInputTimeButton"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/editTime"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="Set a date"
        android:paddingTop="2dp"
        android:textColor="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="13dp" />


    <View
        android:id="@+id/lineView4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/editInputDateButton"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/editAlert"
        android:background="#30ffffff" />

    <View
        android:id="@+id/lineView6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/editInputTimeButton"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/editTime"
        android:background="#30ffffff" />

    <!--Location-->
    <TextView
        android:id="@+id/editLocation"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/editInputDateButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/editAlert"
        android:gravity="center_vertical"
        android:text="Location:"
        android:textColor="#80ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editInputLocation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/editInputDateButton"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/editLocation"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="Set a location"
        android:paddingTop="2dp"
        android:textColor="#40ffffff"
        android:textColorHint="#40ffffff"
        android:textSize="13dp" />

    <View
        android:id="@+id/lineView5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/editLocation"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/editAlert"
        android:background="#30ffffff" />


    <View
        android:id="@+id/centerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"></View>

    <View
        android:id="@+id/borderView"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="#30ffffff"></View>

    <TimePicker
        android:id="@+id/inputEditTime"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="Set a time"
        android:inputType="datetime"
        android:paddingTop="2dp"
        android:textSize="13dp"
        android:visibility="gone" />

    <DatePicker
        android:id="@+id/inputDate"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@null"
        android:foregroundGravity="top"
        android:textSize="13dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/editReminderCancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignRight="@id/centerView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="1dp"
        android:background="#2d2d2d"
        android:text="Cancel"
        android:textColor="#95990000" />

    <Button
        android:id="@+id/editReminderDone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@id/centerView"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="1dp"

        android:background="#2d2d2d"
        android:text="Done"
        android:textColor="#993bb143"
        android:textStyle="bold" />


</RelativeLayout>